--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
 				</div>
 			</div>
 		</div>
+		<h1 class="menuTag">OUR MENU</h1>
+		<svg id="underline1" width="59" height="12" viewBox="0 0 59 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<line x1="1.46967" y1="9.78315" x2="9.95495" y2="1.29787" stroke="black" stroke-width="1.5"/>
+			<line x1="33.4697" y1="10.7831" x2="41.955" y2="2.29787" stroke="black" stroke-width="1.5"/>
+			<line x1="17.4697" y1="10.7831" x2="25.955" y2="2.29787" stroke="black" stroke-width="1.5"/>
+			<line x1="49.4697" y1="10.7831" x2="57.955" y2="2.29787" stroke="black" stroke-width="1.5"/>
+			<line x1="17.7834" y1="9.84381" x2="9.29811" y2="1.35853" stroke="black" stroke-width="1.5"/>
+			<line x1="49.7834" y1="10.8438" x2="41.2981" y2="2.35853" stroke="black" stroke-width="1.5"/>
+			<line x1="33.7834" y1="10.8438" x2="25.2981" y2="2.35853" stroke="black" stroke-width="1.5"/>
+		</svg>
 		<div class="menu">
 			<div class="container">
 				<div class="img">
