--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 					</span>
 				</div>
 				<div class="img">
-					<img src="./images/salad.JPG">
+					<img src="./images/salad.jpg">
 					<span>
 						<svg id="svg1" width="51" height="52" viewBox="0 0 51 52" fill="none"
 							xmlns="http://www.w3.org/2000/svg">
