--- a/index.html
+++ b/index.html
@@ -231,6 +231,31 @@
 
 			</div>
 		</div>
+		<div class="footer">
+			<div>
+				<h1>Sadhana Caterers</h1>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven.
+				</p>
+			</div>
+			<div>
+				<h1>About Us</h1>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+			</div>
+			<div>
+				<h1>Location</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+			</div>
+		</div>
+		<footer>
+			<p>Contact Us - </p>
+			<a href=""><i class="fab fa-facebook-square"></i></a>
+			<a href=""><i class="fab fa-twitter"></i></a>
+			<a href=""><i class="fab fa-instagram"></i></a>
+		</footer>
 	</div>
 
 	<script type="text/javascript" src="./js/jquery.js"></script>
