menu page done initially

--- a/index.html
+++ b/index.html
@@ -36,13 +36,18 @@
 				class="active"><a href="">HOME</a></li>
 			<li onmouseover="mouseover(this)"
 				onmouseout="mouseout(document.querySelector('body > nav > ul:nth-child(2) > li:nth-child(2)'))"><a
-					href="">MENU</a></li>
+					href="menu.html">MENU</a></li>
 			<li onmouseover="mouseover(this)"
 				onmouseout="mouseout(document.querySelector('body > nav > ul:nth-child(2) > li:nth-child(2)'))"><a
 					href="">GALLERY</a></li>
 			<li onmouseover="mouseover(this)"
 				onmouseout="mouseout(document.querySelector('body > nav > ul:nth-child(2) > li:nth-child(2)'))"><a
 					href="">CONTACT</a></li>
+			<li class="contactid">
+                <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+            </li>
 		</ul>
 		<div class="handburger" onclick="handburger(this)">
 			<span></span>
