--- a/menu.html
+++ b/menu.html
@@ -4,15 +4,15 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MENU</title>
-    <link rel="stylesheet" type="text/css" href="./stylesheets/nav.css">
-    <link rel="stylesheet" type="text/css" href="./stylesheets/menu.css">
-    <link rel="stylesheet" type="text/css" href="./stylesheets/icon/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/nav.css">
+    <link rel="stylesheet" type="text/css" href="./css/menu.css">
+    <link rel="stylesheet" type="text/css" href="./icon/css/all.min.css">
 </head>
-
-<body>
+<body
+    onload="mouseover(document.querySelector('body > nav > ul:nth-child(2) > li:nth-child(3)')) ; checkNav()">
     <nav>
         <ul>
-            <li><a href="">
+            <li><a href="index.html">
                 <svg width="150" height="46" viewBox="0 0 150 46" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M5.22 32.49L5.00989 32.9438L5.02003 32.9483L5.22 32.49ZM2.67 30.45L2.26123 30.738L2.26441 30.7424L2.67 30.45ZM1.71 27.42V26.92H1.20115L1.21008 27.4288L1.71 27.42ZM4.62 27.42L5.11742 27.3692L5.07158 26.92H4.62V27.42ZM5.82 29.91L5.47161 30.2686L5.4768 30.2737L5.48214 30.2786L5.82 29.91ZM12 29.94L12.3271 30.3182L12.3278 30.3175L12 29.94ZM12.48 25.47L12.1046 25.8003L12.1046 25.8003L12.48 25.47ZM10.83 24.33L10.6467 24.7952L10.6467 24.7952L10.83 24.33ZM8.16 23.49L8.28937 23.007L8.28621 23.0062L8.16 23.49ZM4.83 22.41L4.629 22.8678L4.63304 22.8696L4.83 22.41ZM2.7 20.73L2.29877 21.0284L2.30308 21.0342L2.30756 21.0398L2.7 20.73ZM2.7 14.58L3.11748 14.8552L3.11748 14.8552L2.7 14.58ZM5.13 12.54L4.92374 12.0845L4.92047 12.086L5.13 12.54ZM13.56 13.29L13.25 13.6823L13.253 13.6847L13.56 13.29ZM15.69 17.19V17.69H16.2418L16.1876 17.1409L15.69 17.19ZM12.69 17.19L12.1939 17.252L12.2486 17.69H12.69V17.19ZM11.43 15.09L11.1088 15.4733L11.1151 15.4784L11.43 15.09ZM5.7 15.06L6.01371 15.4494L6.02009 15.4441L5.7 15.06ZM5.25 19.38L4.87361 19.7093L4.88142 19.7179L5.25 19.38ZM6.84 20.49L6.64664 20.9511L6.65547 20.9548L6.66444 20.9582L6.84 20.49ZM9.51 21.33L9.37487 21.8114L9.37726 21.8121L9.51 21.33ZM12.84 22.47L12.6339 22.9256L12.643 22.9296L12.84 22.47ZM15 24.18L14.6037 24.4849L14.6076 24.4898L15 24.18ZM15.09 30.18L15.5187 30.4372L15.5187 30.4372L15.09 30.18ZM12.69 32.37L12.4564 31.9279L12.69 32.37ZM8.94 32.71C7.61857 32.71 6.44814 32.4804 5.41997 32.0317L5.02003 32.9483C6.19186 33.4596 7.50143 33.71 8.94 33.71V32.71ZM5.43006 32.0363C4.41828 31.5678 3.63943 30.9397 3.07559 30.1576L2.26441 30.7424C2.94057 31.6803 3.86172 32.4122 5.00994 32.9437L5.43006 32.0363ZM3.07874 30.162C2.5199 29.3688 2.22828 28.4574 2.20992 27.4112L1.21008 27.4288C1.23172 28.6626 1.5801 29.7712 2.26126 30.738L3.07874 30.162ZM1.71 27.92H4.62V26.92H1.71V27.92ZM4.12258 27.4708C4.23439 28.5665 4.68642 29.5059 5.47161 30.2686L6.16839 29.5514C5.55358 28.9541 5.20561 28.2335 5.11742 27.3692L4.12258 27.4708ZM5.48214 30.2786C6.32518 31.0514 7.50418 31.4 8.94 31.4V30.4C7.65582 30.4 6.75482 30.0886 6.15786 29.5414L5.48214 30.2786ZM8.94 31.4C10.3201 31.4 11.47 31.0595 12.3271 30.3182L11.6729 29.5618C11.05 30.1005 10.1599 30.4 8.94 30.4V31.4ZM12.3278 30.3175C13.1989 29.5611 13.64 28.5826 13.64 27.42H12.64C12.64 28.2974 12.3211 28.9989 11.6722 29.5625L12.3278 30.3175ZM13.64 27.42C13.64 26.5241 13.3912 25.7486 12.8554 25.1397L12.1046 25.8003C12.4488 26.1914 12.64 26.7159 12.64 27.42H13.64ZM12.8554 25.1397C12.3595 24.5763 11.7422 24.1519 11.0133 23.8648L10.6467 24.7952C11.2378 25.0281 11.7205 25.3637 12.1046 25.8003L12.8554 25.1397ZM11.0133 23.8648C10.3282 23.5949 9.41776 23.3093 8.28937 23.007L8.03063 23.973C9.14224 24.2707 10.0118 24.5451 10.6467 24.7952L11.0133 23.8648ZM8.28621 23.0062C6.91858 22.6494 5.83503 22.2967 5.02696 21.9504L4.63304 22.8696C5.50497 23.2433 6.64142 23.6106 8.03379 23.9738L8.28621 23.0062ZM5.031 21.9522C4.29197 21.6277 3.64593 21.1213 3.09244 20.4202L2.30756 21.0398C2.95407 21.8587 3.72803 22.4723 4.62901 22.8678L5.031 21.9522ZM3.10123 20.4316C2.60393 19.7629 2.33 18.8385 2.33 17.61H1.33C1.33 18.9815 1.63607 20.1371 2.29877 21.0284L3.10123 20.4316ZM2.33 17.61C2.33 16.5595 2.59573 15.6468 3.11748 14.8552L2.28252 14.3048C1.64427 15.2732 1.33 16.3805 1.33 17.61H2.33ZM3.11748 14.8552C3.64175 14.0597 4.37654 13.4384 5.33953 12.994L4.92047 12.086C3.80346 12.6016 2.91825 13.3403 2.28252 14.3048L3.11748 14.8552ZM5.33625 12.9955C6.32142 12.5494 7.45924 12.32 8.76 12.32V11.32C7.34077 11.32 6.05858 11.5706 4.92375 12.0845L5.33625 12.9955ZM8.76 12.32C10.6352 12.32 12.1178 12.7875 13.25 13.6823L13.87 12.8977C12.5222 11.8325 10.8048 11.32 8.76 11.32V12.32ZM13.253 13.6847C14.4024 14.5786 15.0456 15.7525 15.1924 17.2391L16.1876 17.1409C16.0144 15.3875 15.2376 13.9614 13.867 12.8953L13.253 13.6847ZM15.69 16.69H12.69V17.69H15.69V16.69ZM13.1861 17.128C13.0673 16.177 12.5657 15.3671 11.7449 14.7016L11.1151 15.4784C11.7743 16.0129 12.1127 16.603 12.1939 17.252L13.1861 17.128ZM11.7511 14.7067C10.8994 13.9932 9.79566 13.66 8.49 13.66V14.66C9.62434 14.66 10.4806 14.9468 11.1089 15.4733L11.7511 14.7067ZM8.49 13.66C7.2593 13.66 6.20807 13.9858 5.37991 14.6759L6.02009 15.4441C6.63194 14.9342 7.4407 14.66 8.49 14.66V13.66ZM5.38634 14.6706C4.53036 15.3602 4.12 16.3336 4.12 17.52H5.12C5.12 16.5864 5.42964 15.9198 6.01367 15.4494L5.38634 14.6706ZM4.12 17.52C4.12 18.3767 4.35924 19.1213 4.87371 19.7093L5.62629 19.0507C5.30076 18.6787 5.12 18.1833 5.12 17.52H4.12ZM4.88142 19.7179C5.37184 20.2529 5.96224 20.6641 6.64664 20.9511L7.03336 20.0289C6.47776 19.7959 6.00816 19.4671 5.61858 19.0421L4.88142 19.7179ZM6.66444 20.9582C7.3239 21.2055 8.22953 21.4899 9.37487 21.8114L9.64513 20.8486C8.51047 20.5301 7.6361 20.2545 7.01556 20.0218L6.66444 20.9582ZM9.37726 21.8121C10.7443 22.1885 11.8268 22.5604 12.6339 22.9256L13.0461 22.0144C12.1732 21.6196 11.0357 21.2315 9.64274 20.8479L9.37726 21.8121ZM12.643 22.9296C13.3985 23.2533 14.0517 23.7673 14.6037 24.4849L15.3963 23.8751C14.7483 23.0327 13.9615 22.4067 13.037 22.0104L12.643 22.9296ZM14.6076 24.4898C15.1164 25.1343 15.4 26.0519 15.4 27.3H16.4C16.4 25.9081 16.0836 24.7457 15.3924 23.8702L14.6076 24.4898ZM15.4 27.3C15.4 28.2267 15.156 29.0981 14.6613 29.9228L15.5187 30.4372C16.104 29.4619 16.4 28.4133 16.4 27.3H15.4ZM14.6613 29.9228C14.1746 30.7338 13.4474 31.4044 12.4564 31.9279L12.9236 32.8121C14.0526 32.2156 14.9254 31.4262 15.5187 30.4372L14.6613 29.9228ZM12.4564 31.9279C11.4815 32.4429 10.3149 32.71 8.94 32.71V33.71C10.4451 33.71 11.7785 33.4171 12.9236 32.8121L12.4564 31.9279ZM23.2774 17.04L23.7122 17.2869L23.7135 17.2846L23.2774 17.04ZM27.0274 13.2L26.7782 12.7665L26.7758 12.7679L27.0274 13.2ZM38.3074 13.47L38.579 13.0502L38.579 13.0502L38.3074 13.47ZM42.0274 18.15V18.65H42.7565L42.4939 17.9699L42.0274 18.15ZM38.7574 18.15L38.3032 18.3591L38.4372 18.65H38.7574V18.15ZM36.2374 15.24L35.971 15.6631L35.9745 15.6653L36.2374 15.24ZM28.4074 15.24L28.6603 15.6713L28.6603 15.6713L28.4074 15.24ZM25.6774 18.15L26.1188 18.3849L26.1203 18.382L25.6774 18.15ZM25.6774 26.91L25.2345 27.142L25.236 27.1449L25.6774 26.91ZM28.4074 29.79L28.6603 29.3587L28.6603 29.3587L28.4074 29.79ZM36.2374 29.82L36.4982 30.2466L36.5003 30.2453L36.2374 29.82ZM38.7574 26.91V26.41H38.4372L38.3032 26.7009L38.7574 26.91ZM42.0274 26.91L42.4933 27.0917L42.7591 26.41H42.0274V26.91ZM38.3074 31.56L38.5755 31.982L38.579 31.9798L38.3074 31.56ZM27.0274 31.83L26.7758 32.2621L26.7823 32.2658L27.0274 31.83ZM23.2774 28.02L23.7122 27.7731L23.2774 28.02ZM22.3974 22.53C22.3974 20.5681 22.8389 18.8246 23.7122 17.2869L22.8426 16.7931C21.8759 18.4954 21.3974 20.4119 21.3974 22.53H22.3974ZM23.7135 17.2846C24.5911 15.7201 25.7784 14.5059 27.279 13.6321L26.7758 12.7679C25.1164 13.7341 23.8037 15.0799 22.8414 16.7954L23.7135 17.2846ZM27.2767 13.6335C28.7969 12.7593 30.4802 12.32 32.3374 12.32V11.32C30.3146 11.32 28.4579 11.8007 26.7782 12.7665L27.2767 13.6335ZM32.3374 12.32C34.5336 12.32 36.4266 12.8486 38.0358 13.8898L38.579 13.0502C36.7882 11.8914 34.7013 11.32 32.3374 11.32V12.32ZM38.0358 13.8898C39.6409 14.9284 40.8162 16.4013 41.561 18.3301L42.4939 17.9699C41.6786 15.8587 40.374 14.2116 38.579 13.0502L38.0358 13.8898ZM42.0274 17.65H38.7574V18.65H42.0274V17.65ZM39.2116 17.9409C38.5936 16.5984 37.6901 15.5502 36.5003 14.8147L35.9745 15.6653C36.9847 16.2898 37.7612 17.1816 38.3032 18.3591L39.2116 17.9409ZM36.5038 14.8169C35.3299 14.0778 33.9335 13.72 32.3374 13.72V14.72C33.7814 14.72 34.9849 15.0422 35.971 15.6631L36.5038 14.8169ZM32.3374 13.72C30.7964 13.72 29.3978 14.0799 28.1546 14.8087L28.6603 15.6713C29.7371 15.0401 30.9584 14.72 32.3374 14.72V13.72ZM28.1546 14.8087C26.909 15.5388 25.9353 16.5801 25.2345 17.918L26.1203 18.382C26.7395 17.1999 27.5858 16.3012 28.6603 15.6713L28.1546 14.8087ZM25.236 17.9151C24.5307 19.2403 24.1874 20.7841 24.1874 22.53H25.1874C25.1874 20.9159 25.5042 19.5397 26.1188 18.3849L25.236 17.9151ZM24.1874 22.53C24.1874 24.2573 24.5312 25.7993 25.2345 27.142L26.1203 26.678C25.5036 25.5007 25.1874 24.1227 25.1874 22.53H24.1874ZM25.236 27.1449C25.9375 28.4628 26.9111 29.4924 28.1546 30.2213L28.6603 29.3587C27.5837 28.7276 26.7374 27.8372 26.1188 26.6751L25.236 27.1449ZM28.1546 30.2213C29.3978 30.9501 30.7964 31.31 32.3374 31.31V30.31C30.9584 30.31 29.7371 29.9899 28.6603 29.3587L28.1546 30.2213ZM32.3374 31.31C33.9308 31.31 35.3252 30.9635 36.4981 30.2466L35.9767 29.3934C34.9897 29.9965 33.784 30.31 32.3374 30.31V31.31ZM36.5003 30.2453C37.6901 29.5098 38.5936 28.4616 39.2116 27.1191L38.3032 26.7009C37.7612 27.8784 36.9847 28.7702 35.9745 29.3947L36.5003 30.2453ZM38.7574 27.41H42.0274V26.41H38.7574V27.41ZM41.5616 26.7283C40.8173 28.6368 39.6422 30.1008 38.0358 31.1402L38.579 31.9798C40.3726 30.8192 41.6775 29.1832 42.4933 27.0917L41.5616 26.7283ZM38.0393 31.138C36.4297 32.1605 34.5353 32.68 32.3374 32.68V33.68C34.6995 33.68 36.7852 33.1195 38.5755 31.982L38.0393 31.138ZM32.3374 32.68C30.4782 32.68 28.7934 32.2497 27.2726 31.3942L26.7823 32.2658C28.4614 33.2103 30.3166 33.68 32.3374 33.68V32.68ZM27.279 31.3979C25.7769 30.5232 24.5894 29.3178 23.7122 27.7731L22.8426 28.2669C23.8054 29.9622 25.118 31.2968 26.7758 32.2621L27.279 31.3979ZM23.7122 27.7731C22.8389 26.2354 22.3974 24.4919 22.3974 22.53H21.3974C21.3974 24.6481 21.8759 26.5646 22.8426 28.2669L23.7122 27.7731Z"
@@ -30,17 +30,23 @@
         <ul>
             <div class="marker"></div>
             <li onmouseover="mouseover(this)"
-                onmouseout="mouseout(document.querySelector('body > nav > ul:nth-child(2) > li:nth-child(2)'))"
-                class="active"><a href="">HOME</a></li>
+                onmouseout="mouseout(document.querySelector('body > nav > ul:nth-child(2) > li:nth-child(3)'))"
+                ><a href="index.html">HOME</a></li>
             <li onmouseover="mouseover(this)"
-                onmouseout="mouseout(document.querySelector('body > nav > ul:nth-child(2) > li:nth-child(2)'))"><a
+                onmouseout="mouseout(document.querySelector('body > nav > ul:nth-child(2) > li:nth-child(3)'))" class="active"><a
                     href="">MENU</a></li>
             <li onmouseover="mouseover(this)"
-                onmouseout="mouseout(document.querySelector('body > nav > ul:nth-child(2) > li:nth-child(2)'))"><a
+                onmouseout="mouseout(document.querySelector('body > nav > ul:nth-child(2) > li:nth-child(3)'))"><a
                     href="">GALLERY</a></li>
             <li onmouseover="mouseover(this)"
-                onmouseout="mouseout(document.querySelector('body > nav > ul:nth-child(2) > li:nth-child(2)'))"><a
+                onmouseout="mouseout(document.querySelector('body > nav > ul:nth-child(2) > li:nth-child(3)'))"><a
                     href="">CONTACT</a></li>
+            <li class="contactid">
+                <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+            </li>
+
         </ul>
         <div class="handburger" onclick="handburger(this)">
             <span></span>
@@ -49,79 +55,64 @@
         </div>
     </nav>
 
+  <div class="img-show">
+    <i class="fas fa-times-circle"></i>
+    <img src="" alt="">
+    <div class="left"  onclick="left()"><i class="fas fa-arrow-left"></i></div>
+    <div class="right" onclick="right()"><i class="fas fa-arrow-right"></i></div>
+  </div>
+  
 
-    <div class="container">
-        <div class="menu">
-            <ul>
-                <li class="active" data-filter="*">ALL</li>
-                <li data-filter=".veg">Veg Menu</li>
-                <li data-filter=".nonveg">Non Veg Menu</li>
-                <li data-filter=".salad">Salad</li>
-            </ul>
+    <div id="main">
+        <div class="header">
+            <h1>MENU</h1>
         </div>
-        <div class="menu-item">
-            <div class="item veg">
-                <img src="./images/img9.jpg">
-            </div>
-            <div class="item nonveg">
-                <img src="./images/img17.jpg">
-            </div>
-            <div class="item salad">
-                <img src="./images/img38.jpg">
-            </div>
-            <div class="item veg">
-                <img src="./images/img36.jpg">
-            </div>
-            <div class="item nonveg">
-                <img src="./images/img31.jpg">
-            </div>
-            <div class="item veg">
-                <img src="./images/img10.jpg">
-            </div>
-            <div class="item veg">
-                <img src="./images/img8.jpg">
-            </div>
-            <div class="item nonveg">
-                <img src="./images/img7.jpg">
-            </div>
-            <div class="item salad">
-                <img src="./images/img11.jpg">
-            </div>
-            <div class="item nonveg">
-                <img src="./images/img2.jpg">
-            </div>
-            <div class="item salad">
-                <img src="./images/img4.jpg">
-            </div>
-            <div class="item veg">
-                <img src="./images/img37.jpg">
-            </div>
-            <div class="item salad">
-                <img src="./images/img39.jpg">
-            </div>
-            <div class="item veg">
-                <img src="./images/img16.jpg">
-            </div>
-            <div class="item nonveg">
-                <img src="./images/img34.jpg">
-            </div>
-            <div class="item salad">
-                <img src="./images/img3.jpg">
-            </div>
-            <div class="item salad">
-                <img src="./images/img25.jpg">
-            </div>
-
-        </div>
+    <!-- Photo Grid -->
+    <div class="row"> 
+      <div class="column">
+        <img src="./imagegallery/img1.jpg" style="width:100%">
+        <img src="./imagegallery/img2.jpg" style="width:100%">
+        <img src="./imagegallery/img5.jpg" style="width:100%">
+        <img src="./imagegallery/img3.jpg" style="width:100%">
+        <img src="./imagegallery/img4.jpg" style="width:100%">
+        <img src="./imagegallery/img6.jpg" style="width:100%">
+      </div>
+      <div class="column">
+        <img src="./imagegallery/img8.jpg" style="width:100%">
+        <img src="./imagegallery/img9.jpg" style="width:100%">
+        <img src="./imagegallery/img10.jpg" style="width:100%">
+        <img src="./imagegallery/img11.jpg" style="width:100%">
+        <img src="./imagegallery/img12.jpg" style="width:100%">
+        <img src="./imagegallery/img25.jpg" style="width:100%">
+      </div>  
+      <div class="column">
+        <img src="./imagegallery/img15.jpg" style="width:100%">
+        <img src="./imagegallery/img16.jpg" style="width:100%">
+        <img src="./imagegallery/img17.jpg" style="width:100%">
+        <img src="./imagegallery/img18.jpg" style="width:100%">
+        <img src="./imagegallery/img19.jpg" style="width:100%">
+        <img src="./imagegallery/img20.jpg" style="width:100%">
+      </div>
+      <div class="column">
+        <img src="./imagegallery/img22.jpg" style="width:100%">
+        <img src="./imagegallery/img23.jpg" style="width:100%">
+        <img src="./imagegallery/img24.jpg" style="width:100%">
+        <img src="./imagegallery/img21.jpg" style="width:100%">
+        <img src="./imagegallery/img14.jpg" style="width:100%">
+        <img src="./imagegallery/img13.jpg" style="width:100%">
+      </div>
     </div>
 
-
-
-
-    <!--SCRIPT-->
-    <script type="text/javascript" src="./js/isotope.js"></script>
-    <script type="text/javascript" src="./js/jquery.js"></script>
-
+        <footer>
+            <p>Contact Us - </p>
+            <a href=""><i class="fab fa-facebook-square"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href=""><i class="fab fa-instagram"></i></a>
+        </footer>
+    </div>
+    
+    <script src="./js/jquery.js"></script>
+    <script src="./js/nav.js"></script>
+    <script src="./js/gallery.js"></script>
 </body>
-
 </html>
