--- a/menu.html
+++ b/menu.html
@@ -86,18 +86,18 @@
         <img src="./imagegallery/img25.jpg" style="width:100%">
       </div>  
       <div class="column">
-        <img src="./imagegallery/img15.jpg" style="width:100%">
-        <img src="./imagegallery/img16.jpg" style="width:100%">
-        <img src="./imagegallery/img17.jpg" style="width:100%">
-        <img src="./imagegallery/img18.jpg" style="width:100%">
-        <img src="./imagegallery/img19.jpg" style="width:100%">
+        <img src="./imagegallery/img15.JPG" style="width:100%">
+        <img src="./imagegallery/img16.JPG" style="width:100%">
+        <img src="./imagegallery/img17.JPG" style="width:100%">
+        <img src="./imagegallery/img18.JPG" style="width:100%">
+        <img src="./imagegallery/img19.JPG" style="width:100%">
         <img src="./imagegallery/img20.jpg" style="width:100%">
       </div>
       <div class="column">
-        <img src="./imagegallery/img22.jpg" style="width:100%">
-        <img src="./imagegallery/img23.jpg" style="width:100%">
-        <img src="./imagegallery/img24.jpg" style="width:100%">
-        <img src="./imagegallery/img21.jpg" style="width:100%">
+        <img src="./imagegallery/img22.JPG" style="width:100%">
+        <img src="./imagegallery/img23.JPG" style="width:100%">
+        <img src="./imagegallery/img24.JPG" style="width:100%">
+        <img src="./imagegallery/img21.JPG" style="width:100%">
         <img src="./imagegallery/img14.jpg" style="width:100%">
         <img src="./imagegallery/img13.jpg" style="width:100%">
       </div>
